--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "kinobot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "deta": "^1.1.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
